# crogrammar

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-11-crogrammar-gec.md  2026-07-12-crogrammar-v2-upgrade.md
docs/superpowers/specs/: 2026-07-11-crogrammar-gec-design.md  2026-07-12-crogrammar-v2-upgrade-design.md
notebooks/: train_colab.ipynb  train_kaggle.ipynb
src/crogrammar/data/: build_dataset.py  confusion.py  conllu.py  download.py  noise.py  raput.py  wikipedia.py
src/crogrammar/eval/: metrics.py  run_eval.py
src/crogrammar/inference/: diff.py  gec.py  segment.py
src/crogrammar/train/: config.py  train.py
tests/: manual_test_set.jsonl  test_build_dataset.py  test_confusion.py  test_conllu.py  test_diff.py  test_download.py  test_gec.py  test_manual_set.py  test_metrics.py  test_noise.py  test_raput.py  test_run_eval.py  test_segment.py  test_train_config.py  test_train_prepare.py  test_wikipedia.py
