[project]
name = "crogrammar"
version = "0.1.0"
description = "Hrvatski gramaticki checker (GEC) - neuronski seq2seq model"
requires-python = ">=3.11"
dependencies = [
    "regex>=2024.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
train = [
    "transformers>=4.44",
    "datasets>=2.20",
    "torch>=2.2",
    "sentencepiece>=0.2",
    "sacrebleu>=2.4",
    "classla>=2.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
